@@ -870,3 +870,4 @@
  - API: ToolbarItemDockable now features a BackgroundComponent and thus supports things like true transparency
  - API: DockStation and Combiner now offer methods to add a placeholder "aside" some given location
  - API: CDockable now offers methods to automatically set the location close to the focused Dockable
+ - API: Moving a maximized CDockable (moving means the parent does not change) does no longer normalize the Dockable 
